--- a/index.html
+++ b/index.html
@@ -22,12 +22,24 @@
     </header>
 
     <main>
-        ...
+        <div class="getInfo">
+            <h3>Informações Básicas</h3>
+            <input type="number" class="workersPayment" placeholder="Valor por dia dos trabalhadores"/>
+            <input type="number" class="kombPayment" placeholder="Valor por dia da komb"/>
+            <div class="checkbox">
+                <input type="checkbox" class="someUnexpectedEvents" />
+                Ouve algum imprevisto monetário
+            </div>
+
+            <div class="hiddenSection">
+                <input type="number" class="unforeseen" placeholder="Digite o valor do imprevisto"/>
+                <textarea class="explanation" placeholder="Explique o imprevisto"></textarea>
+            </div>
+
+        </div>
     </main>
 
-    <footer>
-        ...
-    </footer>
 
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
