--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <input type="number" class="kombPayment" placeholder="Valor por dia da komb"/>
             <div class="checkbox">
                 <input type="checkbox" class="someUnexpectedEvents" />
-                Ouve algum imprevisto monetário
+                <span>Ouve algum imprevisto monetário</span>
             </div>
 
             <div class="hiddenSection">
@@ -37,6 +37,39 @@
             </div>
 
         </div>
+
+        <div class="tableBox">
+            <button class="newLineButton">Adicionar Linha</button>
+
+            <table>
+                <h4 class="tableTitle">Dias Trabalhados</h4>
+                <tr>
+                    <th>Dia</th>
+                    <th>Trabalhadores</th>
+                    <th>Preço</th>
+                </tr>
+                <tr>
+                    <td>12/09</td>
+                    <td>9</td>
+                    <td>R$500,00</td>
+                </tr>
+                <tr>
+                    <td>12/09</td>
+                    <td>9</td>
+                    <td>R$500,00</td>
+                </tr>
+                <tr>
+                    <td>12/09</td>
+                    <td>9</td>
+                    <td>R$500,00</td>
+                </tr>
+            </table>
+
+            <div class="buttonBox">
+                <button class="buttonStyle generateButton">Gerar Relatório</button>
+            </div>
+        </div>
+
     </main>
 
 
