Created the functionality to add and delete row in the table.

--- a/index.html
+++ b/index.html
@@ -39,8 +39,12 @@
         </div>
 
         <div class="tableBox">
-            <button class="newLineButton">Adicionar Linha</button>
 
+
+            <div class="buttonBox2">
+                <button class="newLineButton">Adicionar Linha</button>
+                <button class="deleteLineButton">Deletar Linha</button>
+            </div>
             <table>
                 <h4 class="tableTitle">Dias Trabalhados</h4>
                 <tr>
@@ -49,19 +53,9 @@
                     <th>Preço</th>
                 </tr>
                 <tr>
-                    <td>12/09</td>
-                    <td>9</td>
-                    <td>R$500,00</td>
-                </tr>
-                <tr>
-                    <td>12/09</td>
-                    <td>9</td>
-                    <td>R$500,00</td>
-                </tr>
-                <tr>
-                    <td>12/09</td>
-                    <td>9</td>
-                    <td>R$500,00</td>
+                    <td contenteditable="true">xx/xx</td>
+                    <td contenteditable="true">0</td>
+                    <td contenteditable="true">R$0,00</td>
                 </tr>
             </table>
 
