--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <th>Preço</th>
                 </tr>
                 <tr>
-                    <td contenteditable="true">xx/xx</td>
+                    <td contenteditable="true">dd/mm</td>
                     <td contenteditable="true">0</td>
                     <td contenteditable="true">R$0,00</td>
                 </tr>
