Sending data for tables 2.

--- a/report.html
+++ b/report.html
@@ -77,14 +77,14 @@
                         <b>Imprevistos: </b>
                         <span>R$240,00/dia</span>
                     </div>
-                    <div class="resultsSingle unexpectedValue">
+                    <div class="resultsSingle totalColumn1">
                         <b>Totalizando: </b>
                         <span>R$ 0,00/dia</span>
                     </div>
                 </div>
 
                 <div class="infoColumn">
-                    <div class="resultsSingle">
+                    <div class="resultsSingle workersPayment">
                         <b>Trabalhadores: </b>
                         <span>R$240,00/dia</span>
                     </div>
@@ -92,7 +92,7 @@
                         <b>Dias Trabalhados: </b>
                         <span>R$240,00/dia</span>
                     </div>
-                    <div class="resultsSingle">
+                    <div class="resultsSingle total2">
                         <b>Totalizando: </b>
                         <span>R$ 240,00/dia</span>
                     </div>
