Finished sending the data to the report.

--- a/report.html
+++ b/report.html
@@ -27,18 +27,18 @@
                     <b>Contratado: </b>
                     <span>Geraldo Izidorio de Paulo</span>
                 </div>
-                <div class="infoSingle">
+                <div class="infoSingle contractorBox">
                     <b>Contratante: </b>
                     <span>Geralda Paula</span>
                 </div>
             </div>
 
             <div class="infoBox__column">
-                <div class="infoSingle">
+                <div class="infoSingle initialDate">
                     <b>Data de início: </b>
                     <span>dd/mm/yy</span>
                 </div>
-                <div class="infoSingle">
+                <div class="infoSingle finalDate">
                     <b>Data Final: </b>
                     <span>dd/mm/yy</span>
                 </div>
