Finished the system.

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             <label>Data Final</label>
             <input type="date" class="finalDate"/>
             <label>Dia dos Trabalhadores</label>
-            <input type="number" class="workersPayment" placeholder="Valor por dia dos trabalhadores"/>
+            <input type="number" class="workersPayment" placeholder="Valor por dia dos trabalhadores (ex: 65.13)"/>
             <label>Valor da Komb</label>
-            <input type="number" class="kombPayment" placeholder="Valor por dia da komb"/>
+            <input type="number" class="kombPayment" placeholder="Valor por dia da komb (ex: 260.13)"/>
             <div class="checkbox">
                 <input type="checkbox" class="someUnexpectedEvents" />
                 <span>Ouve algum imprevisto monetário</span>
@@ -52,8 +52,8 @@
 
 
             <div class="buttonBox2">
-                <button class="newLineButton">Adicionar Linha</button>
-                <button class="deleteLineButton">Deletar Linha</button>
+                <button class="btnStrucure newLineButton">Adicionar Linha</button>
+                <button class="btnStrucure deleteLineButton">Deletar Linha</button>
             </div>
             <table>
                 <h4 class="tableTitle">Dias Trabalhados</h4>
@@ -65,7 +65,7 @@
                 <tr>
                     <td contenteditable="true">dd/mm</td>
                     <td contenteditable="true">0</td>
-                    <td contenteditable="true">R$0,00</td>
+                    <td contenteditable="true">R$ 0,00</td>
                 </tr>
             </table>
 
