--- a/report.html
+++ b/report.html
@@ -29,7 +29,7 @@
                 </div>
                 <div class="infoSingle contractorBox">
                     <b>Contratante: </b>
-                    <span>Geralda Paula</span>
+                    <span>Não definido</span>
                 </div>
             </div>
 
@@ -59,26 +59,22 @@
             </table>
             <div class="total">
                 <b>Total: </b>
-                <span>R$ 2.000,00</span>
+                <span>R$ 0,00</span>
             </div>
         </div>
 
         <div class="finalResultsBox">
-            <h4 class="resultsTitle">Dias Trabalhados</h4>
+            <h4 class="resultsTitle">Informações</h4>
 
             <div class="resultsBox">
 
                 <div class="infoColumn">
                     <div class="resultsSingle kombPrice">
-                        <b>Valor Komb: </b>
-                        <span>R$240,00/dia</span>
+                        <b>Valor Komb/Eu: </b>
+                        <span>R$ 0,00/dia</span>
                     </div>
                     <div class="resultsSingle unexpectedValue">
                         <b>Imprevistos: </b>
-                        <span>R$240,00/dia</span>
-                    </div>
-                    <div class="resultsSingle totalColumn1">
-                        <b>Totalizando: </b>
                         <span>R$ 0,00/dia</span>
                     </div>
                 </div>
@@ -86,15 +82,11 @@
                 <div class="infoColumn">
                     <div class="resultsSingle workersPayment">
                         <b>Trabalhadores: </b>
-                        <span>R$240,00/dia</span>
+                        <span>R$ 0,00/dia</span>
                     </div>
                     <div class="resultsSingle daysWorked">
                         <b>Dias Trabalhados: </b>
-                        <span>R$240,00/dia</span>
-                    </div>
-                    <div class="resultsSingle total2">
-                        <b>Totalizando: </b>
-                        <span>R$ 240,00/dia</span>
+                        <span>R$ 0/dia</span>
                     </div>
                 </div>
 
@@ -102,7 +94,7 @@
 
             <div class="realTotal">
                 <b>Total Final: </b>
-                <span>R$ 2.000,00</span>
+                <span>R$ 0,00</span>
             </div>
 
             <div class="unexpected">
