Created the functionality to load a previous table.

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             <div class="buttonBox2">
                 <button class="btnStrucure newLineButton">Adicionar Linha</button>
                 <button class="btnStrucure deleteLineButton">Deletar Linha</button>
+                <button class="btnStrucure loadLastTable">Carregar Ultima Tabela</button>
             </div>
             <table>
                 <h4 class="tableTitle">Dias Trabalhados</h4>
@@ -78,5 +79,6 @@
 
 
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/loadLastTable.js"></script>
 </body>
 </html>
