Making the screens more beautiful.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <input type="number" class="kombPayment" placeholder="Valor por dia da komb (ex: 260.13)"/>
             <div class="checkbox">
                 <input type="checkbox" class="someUnexpectedEvents" />
-                <span>Ouve algum imprevisto monetário</span>
+                <span>Imprevisto monetário</span>
             </div>
 
             <div class="hiddenSection">
