Adding meta-tags and opening the print when loading the page report.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="initial-scale=1, width=device-width,height=device-height" />
-    <meta name="title" content="Vanderson - Desenvolvedor Web Fullstack">
-    <meta name="description" content="Desenvolvedor web fullstack Freelancer - criação de sites e sistemas, otimizado para celulares e tablets. Solicite seu orçamento.">
-    <meta name="keywords" content="desenvolvedor web, desenvolvedor web portfolio, desenvolvedor front end, desenvolvedor back end, programador php" />
+    <meta name="title" content="Tabela de Serviços">
+    <meta name="description" content="Tabela para gerar relatório de serviço. Uso exclusivo.">
+    <meta name="keywords" content="" />
     <meta name="author" content="Vanderson Tiago de Paulo"/>
 
     <!--Css's-->
